--- a/gas/index.html
+++ b/gas/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Energy Data - Gas Reserves</title>
+	<title>Energy Data Prototype</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="../../lib/Leaflet-0.6.1/dist/leaflet.css" />
 	<link rel="shortcut icon" href="../../img/eDip_logo.png" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="../dist/leaflet.ie.css" /><![endif]-->
@@ -46,8 +46,10 @@
 	<div id="map"></div>
 	<script src="../../lib/Leaflet-0.6.1/dist/leaflet.js"></script>
 	<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GR2000.js"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GR2010.js"></script>
+	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GC2000.js"></script>
+	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GS2000.js"></script>
+	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GC2010.js"></script>
+	<script type="text/javascript" src="../data/Global_Energy_Data_110m_GS2010.js"></script>
 	<script type="text/javascript" src="../data/oil_pipelines.js"></script>
 	<script type="text/javascript">
 
@@ -86,11 +88,12 @@
 			//cmAttr = 'Data: <a href="http://www.eia.gov/countries/data.cfm" title="U.S. Energy Information Administration">EIA</a>, <a href="http://www.openstreetmap.org/" title="&copy; OpenStreetMap contributors">OpenStreetMap</a>, <a href="http://www.cloudmade.com/" title="&copy; 2011 CloudMade">CloudMade</a>, <a href="http://www.stamen.com/" title="Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under CC BY SA.">Stamen Design</a>',
 			cmUrl = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/{styleId}/256/{z}/{x}/{y}.png';
 		
-	    var GR2000, GR2010;
+	    var GC2000, GS2000, GC2010, GS2010;
 		
-		
-		GR2000 = L.geoJson(gr2000Data, {style: styleGR2000,onEachFeature: onEachFeature, attribution: cmAttr}),
-		GR2010 = L.geoJson(gr2010Data, {style: styleGR2010,onEachFeature: onEachFeature, attribution: cmAttr});
+		GC2000 = L.geoJson(gc2000Data, {style: styleGC2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GC2010 = L.geoJson(gc2010Data, {style: styleGC2010,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GS2000 = L.geoJson(gs2000Data, {style: styleGS2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GS2010 = L.geoJson(gs2010Data, {style: styleGS2010,onEachFeature: onEachFeature, attribution: cmAttr}),
 		pipelines = L.geoJson(pipelinesData, {style: stylePipelines, attribution: cmAttr});
 		
 		var minimal   = L.tileLayer(cmUrl, {styleId: 22677, attribution: cmAttr}),
@@ -111,7 +114,7 @@
 								'#ddd';
 		}
 		
-		function getColorGR(d) {
+		function getColorGC(d) {
 			return d > 2000	?	'#800026' :
 			       d > 1500	?	'#BD0026' :
 			       d > 1000	?	'#E31A1C' :
@@ -123,7 +126,19 @@
 								'#CCCCCC';
 		}
 		
-		function styleGR2000(feature) {
+		function getColorGS(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
+		}
+		
+		function styleGC2000(feature) {
 			return {
 				weight: 1,
 				opacity: 1,
@@ -133,7 +148,27 @@
 			};
 		}
 		
-		function styleGR2010(feature) {
+		function styleGS2000(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+
+		function styleGC2010(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleGS2010(feature) {
 			return {
 				weight: 1,
 				opacity: 1,
@@ -176,8 +211,10 @@
 		}
 
 		function resetHighlight(e) {
-			GR2000.resetStyle(e.target);
-			GR2010.resetStyle(e.target);
+			GC2000.resetStyle(e.target);
+			GS2000.resetStyle(e.target);
+			GC2010.resetStyle(e.target);
+			GS2010.resetStyle(e.target);
 			info.update();
 		}
 
@@ -194,7 +231,7 @@
 				[84, 180],
 				[-60, -180]
 			]),
-			layers: [minimal, GR2010]
+			layers: [minimal, GC2010]
 		});
 
 		var baseLayers = {
@@ -204,8 +241,10 @@
 		};
 		
 		var dataLayers = {
-			"Gas Reserves (2000)":GR2000,
-			"Gas Reserves (2010)":GR2010,
+			"Gas Consumption (2000)":GC2000,
+			"Gas Consumption (2010)":GC2010,
+			"Total Gas Production (2000)":GS2000,
+			"Total Gas Production (2010)":GS2010,
 		};
 
 		//If vector overlays such as roads, rivers, pipelines, etc are needed, add them here (AND add the layer group using using control.layers).
