--- a/gas/index.html
+++ b/gas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Energy Data Prototype</title>
+	<title>Energy Data - Gas Consumption & Production</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="../../lib/Leaflet-0.6.1/dist/leaflet.css" />
@@ -104,38 +104,39 @@
 		
 		// get color depending on OC11 value
 		function getColorAll(d) {
-			return d > 9999	?	'#800026' :
-			       d > 4999 ?	'#BD0026' :
-			       d > 999  ?	'#E31A1C' :
-			       d > 499	?	'#FC4E2A' :
-			       d > 249	?	'#FD8D3C' :
-			       d > 124	?	'#FEB24C' :
-			       d > 0	?	'#FED976' :
-								'#ddd';
+			return d > 14999	?	'#800026' :
+			       d > 3999		?	'#BD0026' :
+				   d > 2499		?	'#E31A1C' :
+			       d > 1999		?	'#FC4E2A' :
+			       d > 1499		?	'#FD8D3C' :
+			       d > 999		?	'#FEB24C' :
+			       d > 299		?	'#FED976' :
+			       d > 0		?	'#FFEDA0' :
+									'#CCCCCC' ;
 		}
 		
 		function getColorGC(d) {
-			return d > 2000	?	'#800026' :
-			       d > 1500	?	'#BD0026' :
-			       d > 1000	?	'#E31A1C' :
-			       d > 500	?	'#FC4E2A' :
-			       d > 250	?	'#FD8D3C' :
-			       d > 100	?	'#FEB24C' :
-			       d > 50	?	'#FED976' :
-			       d > 1	?	'#FFEDA0' :
-								'#CCCCCC';
+			return d > 14999	?	'#800026' :
+			       d > 3999		?	'#BD0026' :
+				   d > 2499		?	'#E31A1C' :
+			       d > 1999		?	'#FC4E2A' :
+			       d > 1499		?	'#FD8D3C' :
+			       d > 999		?	'#FEB24C' :
+			       d > 299		?	'#FED976' :
+			       d > 0		?	'#FFEDA0' :
+									'#CCCCCC' ;
 		}
 		
 		function getColorGS(d) {
-			return d > 2000	?	'#800026' :
-			       d > 1500	?	'#BD0026' :
-			       d > 1000	?	'#E31A1C' :
-			       d > 500	?	'#FC4E2A' :
-			       d > 250	?	'#FD8D3C' :
-			       d > 100	?	'#FEB24C' :
-			       d > 50	?	'#FED976' :
-			       d > 1	?	'#FFEDA0' :
-								'#CCCCCC';
+			return d > 14999	?	'#800026' :
+			       d > 3999		?	'#BD0026' :
+				   d > 2499		?	'#E31A1C' :
+			       d > 1999		?	'#FC4E2A' :
+			       d > 1499		?	'#FD8D3C' :
+			       d > 999		?	'#FEB24C' :
+			       d > 299		?	'#FED976' :
+			       d > 0		?	'#FFEDA0' :
+									'#CCCCCC' ;
 		}
 		
 		function styleGC2000(feature) {
@@ -277,10 +278,10 @@
 		legend.onAdd = function (map) {
 
 			var div = L.DomUtil.create('div', 'info legend'),
-				grades = ['No data', 1, 125, 250, 500, 1000, 5000, 10000],
+				grades = ['No data', 1, 300, 1000, 1500, 2000, 2500, 4000, 15000],
 				labels = [],
 				from, to;
-
+				
 			for (var i = 0; i < grades.length; i++) {
 				from = grades[i];
 				to = grades[i + 1];
