Removed year attribution from pipeline in key

--- a/gas/index.html
+++ b/gas/index.html
@@ -258,7 +258,7 @@
 
 		//If vector overlays such as roads, rivers, pipelines, etc are needed, add them here (AND add the layer group using using control.layers).
 		var overlays = {
-			"Oil & Gas Pipelines (2009)":pipelines
+			"Oil & Gas Pipelines":pipelines
 			//"Labels":tonerlabels
 		};
 		
