Adding Shale Gas data (Fixes #22)
Data provided in a table from DOE

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 						<li>
 							<a href="oil/">Oil Consumption & Production</a>
 						</li>
+						<li>
+							<a href="shalegas/">Shale Gas TRR</a>
+						</li>
 					</ul>
 				</div>
 			</header>
