Shale gas (#22) to map.html

--- a/map.html
+++ b/map.html
@@ -111,7 +111,7 @@
 		OR2010 = L.geoJson(or2010Data, {style: styleOR2010,onEachFeature: onEachFeature, attribution: cmAttr}),
 		GR2000 = L.geoJson(gr2000Data, {style: styleGR2000,onEachFeature: onEachFeature, attribution: cmAttr}),
 		GR2010 = L.geoJson(gr2010Data, {style: styleGR2010,onEachFeature: onEachFeature, attribution: cmAttr}),
-		SG2012 = L.geoJson(sg2012Data, {style: stylesg2012,onEachFeature: onEachFeature, attribution: cmAttr}),
+		SG2012 = L.geoJson(sg2012Data, {style: styleSG2012,onEachFeature: onEachFeature, attribution: cmAttr}),
 		pipelines = L.geoJson(pipelinesData, {style: stylePipelines, attribution: cmAttr});
 		
 		var minimal   = L.tileLayer(cmUrl, {styleId: 22677, attribution: cmAttr}),
