--- a/shalegas/index.html
+++ b/shalegas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Energy Data - Gas Reserves</title>
+	<title>Energy Data - Shale Gas TRR</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../../lib/Leaflet-0.6.1/dist/leaflet.css" />
