Updating Github repo to USStateDept

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					
 						Developed by the eDiplomacy's Geo Development Services Team.
 						
-						Find us on <a href="https://github.com/brodydittemore-eDip/energy">Github!</a>
+						Find us on <a href="https://github.com/USStateDept/energy">Github!</a>
 				</div>
 			</div>
 		</div>
