--- a/shalegas/index-m.html
+++ b/shalegas/index-m.html
@@ -54,7 +54,7 @@
 	</head>
 <body>
 	<div id="map"></div>
-	<script src="../../lib/Leaflet-0.6.1/dist/leaflet.js"></script>
+	<script src="../../lib/Leaflet-0.6.1/dist/leaflet-src.js"></script>
 	<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2"></script>
 	<script type="text/javascript" src="../data/Global_Energy_Data_110m_SG2012.js"></script>
 	<script type="text/javascript" src="../data/oil_pipelines.js"></script>
